--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,12 @@ dependencies {
 	// https://mvnrepository.com/artifact/javax.servlet/jstl
 	implementation 'javax.servlet:jstl:1.2'
 
-	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.18'// validation 주입
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.18'// 유효성 검증을 위한 validation 주입
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0' // 마이바티스
+
+	// https://mvnrepository.com/artifact/com.mysql/mysql-connector-j
+	implementation 'com.mysql:mysql-connector-j:8.0.33' // mysql 커넥터 (오라클 커넥터는 따로)
+
 }
 
 tasks.named('test') {
