--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,22 @@ spring.messages.encoding=UTF-8
 #spring.mvc.view.prefix=/WEB-INF/views/
 #spring.mvc.view.suffix=.jsp
 
-#\uC608\uC2DC
+# \uC608\uC2DC
 hello=hello world
+
+# \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC8FC\uC18C
+#spring?serverTimezone=Asia/Seoul : DB\uBA85 + \uCD94\uAC00 \uC635\uC158
+#username=spring : \uACC4\uC815\uBA85
+#password=spring : \uC554\uD638
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/spring?serverTimezone=Asia/Seoul
+spring.datasource.username=spring
+spring.datasource.password=spring
+
+# \uB9C8\uC774\uBC14\uD2F0\uC2A4 \uC124\uC815
+# 1.SQL mapper\uC704\uCE58
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
+# 2.\uC5B8\uB354\uBC14 \uCE74\uBA5C\uD45C\uAE30\uB85C \uB9F5\uD551
+mybatis.configuration.map-underscore-to-camel-case=true
+# 3.\uC5D8\uB9AC\uC5B4\uC2A4\uB85C \uC0AC\uC6A9\uD560 \uD328\uD0A4\uC9C0\uBA85
+mybatis.type-aliases-package=com.simple.basic.command
