--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,8 @@ hello=hello world
 #spring?serverTimezone=Asia/Seoul : DB\uBA85 + \uCD94\uAC00 \uC635\uC158
 #username=spring : \uACC4\uC815\uBA85
 #password=spring : \uC554\uD638
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring?serverTimezone=Asia/Seoul
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/spring?serverTimezone=Asia/Seoul
 spring.datasource.username=spring
 spring.datasource.password=spring
 
